Tue Feb 10 20:00:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (load_lock): makes circular require deadlock.
	  [ruby-core:19821]

Tue Feb 10 19:40:58 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_feature_p): returns found feature name if loading.
	  [ruby-core:19798]

	* eval.c (search_required): ditto.

Mon Feb  9 17:35:38 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_accept): secure fd before accept because if
	  error causes in securing, cannot restore the state of accepted
	  socket.
	  fixed [ruby-core:19728]

Mon Feb  9 13:42:15 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (ifs_open_socket): should retry without proto_buffer
	  if cannot find the suitable protocol. a patch from Heesob Park.
	  fixed [ruby-core:19713]

Mon Feb  9 13:40:21 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/stringio/stringio.c (strio_ungetc): should allow ungetc at
	  the top of the buffer.  ref #701

Thu Feb  5 09:38:48 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c (h_conv): can't guess UTF-8 input in
	  conversion. [ruby-list:45609]

Thu Feb  5 09:03:21 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/rexml/entity.rb (unnormalized): do not call
	  document.record_entity_expansion if document is nil.
	  see <http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=502535>.
	  Thanks, Naohisa Goto.  backported from trunk.

	* test/rexml/test_document.rb: ditto.

Thu Feb  5 08:55:24 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_join): do not repeat self in a recursive array.
	  [ruby-dev:37019]

Wed Feb  4 14:26:58 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* dir.c (dir_globs): need taint check.  reported by steve
	  <oksteev at gmail.com>

Tue Feb  3 14:35:26 2009  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* lib/net/pop.rb: check for invalid APOP timestamp. (CVE-2007-1558)
	  [ruby-dev:36631]

	* test/net/pop/test_pop.rb: ditto.
